@@ -94,15 +94,13 @@ holdingdisk hd1 {
     use 290 Mb		# how much space can we use on it
 			# a negative value mean:
 			#        use all space except that value
-    chunksize -1 	# size of chunk if you want big dump to be
+    chunksize 1Gb 	# size of chunk if you want big dump to be
 			# dumped on multiple files on holding disks
-			#  N Kb/Mb/Gb split disks in chunks of size N
-			#  0          split disks in INT_MAX/1024 Kb chunks
-			# -1          same as -INT_MAX/1024 (see below)
-			# -N Kb/Mb/Gb dont split, dump larger
-			#             filesystems directly to tape
-			#             (example: -2 Gb)
-    # chunksize 2 Gb
+			#  N Kb/Mb/Gb split images in chunks of size N
+			#  0          same as INT_MAX bytes
+			# -1          same as -INT_MAX bytes
+			# -N Kb/Mb/Gb dont split, dump images larger than
+			#             N directly to tape (example: -2 Gb)
     }
 #holdingdisk hd2 {
 #    directory "/dumps2/amanda"
